--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,4 +1,15 @@
 {
-  "projectName": "base-repository",
-  "projectOwner": "Miners-Online"
+  "projectName": "repository",
+  "projectOwner": "Miners-Online",
+  "repoType": "github",
+  "repoHost": "https://github.com",
+  "files": [
+    "README.md"
+  ],
+  "imageSize": 100,
+  "commit": true,
+  "commitConvention": "angular",
+  "contributors": [],
+  "contributorsPerLine": 7,
+  "linkToUsage": true
 }
