fix: fix typo in project name

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "base-repoistory",
+  "projectName": "base-repository",
   "projectOwner": "Miners-Online",
   "repoType": "github",
   "repoHost": "https://github.com",
